--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
     <meta name="theme-color" content="#282828">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Área Incrível - Acompanhamento de obra</title>
   </head>
   <body>
     <div id="root"></div>
